--- a/css/home.css
+++ b/css/home.css
@@ -319,6 +319,7 @@
     left: 5%;
     display: flex;
     justify-content: space-between;
+    flex-wrap: nowrap;
 }
 #levelup{
     position: relative;
@@ -345,7 +346,7 @@
     display: flex;
     font-size: 4dvh;
     align-items: center;
-    justify-items: center;    
+    justify-items: center;
     color: transparent;
 }
 .left_arrow>span, .right_arrow>span{
