[js] 옵션 모달 가운데 언어 설정 드롭다운박스 完, 키 입력 기능 구현 中

--- a/css/modal.css
+++ b/css/modal.css
@@ -118,10 +118,10 @@
     top: 1.35dvh;
     left: 0.1dvh;
 }
-.scoreOK{
+.scoreOK, .optionDone{
     margin-top: 3dvh;
-    width: 25%;
-    left: calc(37.5% - 1px);
+    width: 15.5dvh;
+    left: calc(50% - 7.75dvh - 1px);
     aspect-ratio: 3/1;
     border-radius: 1.4dvh;
 }
@@ -443,11 +443,4 @@
     font-size: 1.7dvh;
     font-family: Arial, Helvetica, sans-serif;    
     color: white
-}
-.optionDone{
-    margin-top: 3dvh;
-    width: 33%;
-    left: calc(33.5% - 1px);
-    aspect-ratio: 3/1;
-    border-radius: 1.4dvh;
 }
