--- a/css/home.css
+++ b/css/home.css
@@ -277,8 +277,8 @@
     display: block;
     margin-top: 1.5dvh;
     position: relative;
-    width: 70%;
-    left: calc(15% - 1px);
+    width: 25.2dvh;
+    left: calc(50% - 12.6dvh - 1px);
     aspect-ratio: 4.5/1;
     border-radius: 1.5dvh;
     border: 2px solid rgb(80, 80, 80);
@@ -296,7 +296,7 @@
 .home_button>span{
     display: block;
     position: relative;
-    top: 1.4dvh;
+    line-height: calc(25.2dvh / 4.5);
     font-size: 2.8dvh;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
@@ -304,11 +304,11 @@
     text-shadow: 0.17dvh 0.17dvh rgba(0, 0, 0, 0.5);
 }
 .home_button:hover>span{
-    top: 1.25dvh;
+    top: -0.1dvh;
     left: -0.1dvh;
 }
 .home_button:active>span{
-    top: 1.55dvh;
+    top: 0.1dvh;
     left: 0.1dvh;
 }
 #level_button{
@@ -322,19 +322,14 @@
     flex-wrap: nowrap;
 }
 #levelup{
-    position: relative;
+    width: 22.8dvh;
     margin-top: 0;
     left: 0;
 }
 #levelup>span{
-    top: 1.25dvh;
+    display: inline-block;
+    line-height: calc(22.8dvh / 4.5);
     font-size: 2.5dvh;
-}
-#levelup:hover>span{
-    top: 1.1dvh;
-}
-#levelup:active>span{
-    top: 1.35dvh;
 }
 .arrow_button{
     position: relative;
