--- a/css/howtoplay.css
+++ b/css/howtoplay.css
@@ -1,20 +1,23 @@
 .of_howtoplay{
-    width: 94dvh;
+    width: 96dvh;
     height: 85dvh;
-    left: calc(50dvw - 47dvh);
+    left: calc(50dvw - 48dvh);
     top: 7.5dvh;
 }
 .howToPlayframe{
     position: relative;
-    display: grid;
     margin-top: 1dvh;
-    grid-template-columns: 5fr 4fr;
-    grid-template-rows: repeat(7, 1fr);
     width: 95%;
     aspect-ratio: 7/5;
-    left: 3%;
+    left: 2.5%;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
+}
+#page1{
+    display: grid;
+    grid-template-columns: 5.2fr 4fr;
+    grid-template-rows: repeat(7, 1fr);
+    aspect-ratio: 7/5;
 }
 #howtoplay_buttons{
     position: relative;
@@ -32,7 +35,7 @@
     margin-top: 2.4dvh;
 }
 #howtoplay_button_background>span{
-    top: -0.2dvh;
+    top: -0.1dvh;
 }
 .howToPlayDone{
     width: 15.5dvh;
@@ -46,9 +49,17 @@
 }
 .article{
     display: grid;
-    grid-template-columns: 1fr 12fr;    
-    border: 1px solid white;
+    grid-template-columns: 1fr 12fr;
+    border: 2px solid transparent;
     border-radius: 1dvh;
+    line-height: 2.4dvh;
+    overflow-y: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.article::-webkit-scrollbar{
+    display: none;
 }
 .article:not(:first-child){
     margin-top: 0.2dvh;
@@ -91,17 +102,18 @@
     background-color: var(--tetris-purple);
 }
 .article_item{
-    padding: 0.6dvh;
+    padding: 0.5dvh;
+    padding-right: 0.3dvh;
     text-align: left;
 }
 .article_title{
     display: inline;
-    font-size: 2.1dvh;
+    font-size: 2dvh;
     font-weight: bold;
 }
 .article_content{
     display: inline;
-    font-size: 2.1dvh;
+    font-size: 2dvh;
 }
 #example{
     grid-column: 2/3;
@@ -111,20 +123,15 @@
 #example_container{
     position: relative;
     width: 36dvh;
-    height: 61.2dvh;
-    left: calc(50% - 18dvh);
-    top: calc(50% - 30.6dvh);
-    border: 1px solid white;
+    height: 62.5dvh;
+    left: calc(50% - 17dvh - 2px);
+    /* top: calc(50% - 30.6dvh - 2px); */
+    border: 2px solid white;
+    border-radius: 1dvh 1dvh 0 0;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(17, 1fr);
+    background-color: rgb(100, 100, 100);
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, transparent 1.5%),
+                    linear-gradient(to right, rgba(0, 0, 0, 0.4) 0%, transparent 3%);
 }
-/* 
-// 1. Tetrominos
-// 2. Gravity
-// 3. Line Clear
-// 4. Move
-// 5. Ghost Piece
-// 6. Hold
-// 7. Game Over 
-*/
