--- a/css/howtoplay.css
+++ b/css/howtoplay.css
@@ -9,14 +9,20 @@
     margin-top: 1dvh;
     width: 95%;
     left: 2.5%;
+    aspect-ratio: 7/5;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
 #page1{
     display: grid;
     grid-template-columns: 5.2fr 4fr;
-    grid-template-rows: repeat(7, 1fr);
-    aspect-ratio: 7/5;
+    grid-template-rows: repeat(7, 1fr);    
+}
+#page2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 #howtoplay_buttons{
     position: relative;
@@ -132,4 +138,57 @@
     background-color: rgb(100, 100, 100);
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, transparent 1.5%),
                     linear-gradient(to right, rgba(0, 0, 0, 0.4) 0%, transparent 3%);
+}
+.sub_title{
+    padding-top: 1dvh;
+    font-size: 2.9dvh;
+}
+#keyboard_shape{
+    margin-top: 1.5dvh;
+    width: 86%;
+    aspect-ratio: 2.2/1;
+    border: 0.4dvh solid white;
+    border-radius: 3dvh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+}
+#keyboard_grid{
+    display: grid;
+    width: 90%;
+    aspect-ratio: 2/1;
+    left: 5%;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+}
+#keyboard_explanation{
+    margin-top: 1.5dvh;
+    width: 85%;
+    font-size: 2.1dvh;
+    line-height: 3.1dvh;
+    display: flex;  
+    flex-direction: column;
+    justify-content: space-between;
+}
+.text_keyboardInfo{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+}
+.text_keyboardInfo div:nth-child(1){
+    width: 4%;
+    font-size: 2.3dvh;
+    text-align: left;
+}
+.text_keyboardInfo div:nth-child(2){
+    text-align: center;
+}
+.text_keyboardInfo div:nth-child(3){
+    width: 6%;
+    text-align: center;
+}
+.text_keyboardInfo div:nth-child(4){
+    text-align: left;
 }
