--- a/css/howtoplay.css
+++ b/css/howtoplay.css
@@ -144,23 +144,39 @@
     font-size: 2.9dvh;
 }
 #keyboard_shape{
-    margin-top: 1.5dvh;
-    width: 86%;
-    aspect-ratio: 2.2/1;
+    width: 84%;
+    aspect-ratio: 2.1/1;
     border: 0.4dvh solid white;
     border-radius: 3dvh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     overflow: hidden;
 }
 #keyboard_grid{
     display: grid;
-    width: 90%;
+    width: 88%;
     aspect-ratio: 2/1;
-    left: 5%;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(4, 1fr);
+}
+.single_key{
+    margin: 0.6dvh;
+    border: 0.4dvh solid white;
+    border-radius: 1.5dvh;
+    line-height: 6.1dvh;
+}
+.small_letter{
+    font-size: 2.2dvh;
+}
+.big_letter{
+    font-size: 2.8dvh;
+    font-weight: bold;
+}
+#c_key{
+    position: relative;
+    left: 4dvh;
 }
 #keyboard_explanation{
     margin-top: 1.5dvh;
@@ -181,9 +197,13 @@
     width: 4%;
     font-size: 2.3dvh;
     text-align: left;
+    color: var(--tetris-green);
 }
 .text_keyboardInfo div:nth-child(2){
-    text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
 }
 .text_keyboardInfo div:nth-child(3){
     width: 6%;
@@ -191,4 +211,37 @@
 }
 .text_keyboardInfo div:nth-child(4){
     text-align: left;
+}
+.key_indicator{
+    position: relative;
+    display: flex;
+}
+.tag_name{
+    position: relative;
+    color: var(--tetris-orange);
+    font-size: 2.2dvh;
+    font-weight: bold;
+}
+.key_tag{
+    position: relative;
+    color: rgb(127, 127, 127);
+    letter-spacing: -0.2dvh;
+}
+.dot{    
+    font-size: 2.7dvh;
+}
+.line{
+    font-size: 2.7dvh;
+    text-shadow: 0 -0.05dvh rgb(127, 127, 127), 
+                0 0.05dvh rgb(127, 127, 127), 
+                -0.05dvh 0 rgb(127, 127, 127),
+                0.05dvh 0 rgb(127, 127, 127),
+                -0.05dvh -0.05dvh rgb(127, 127, 127),
+                0.05dvh -0.05dvh rgb(127, 127, 127),
+                -0.05dvh 0.05dvh rgb(127, 127, 127),
+                0.05dvh 0.05dvh rgb(127, 127, 127);
+}
+.tack{
+    font-size: 1.5dvh;
+    text-shadow: 0.15dvh 0 rgb(127, 127, 127);
 }
